# Adaptive-Game-Audio-Mixer

./: .env.example  .gitignore  CMakeLists.txt  Launching  Makefile  README.md  build.bat  build.sh  clean.sh  lint.ps1  make.bat  run.sh  spotify_config.h.in  test.ps1  test.sh
.github/workflows/: ci.yml
docs/: cmd.txt  resources.md
src/: AppLogger.cpp  AppLogger.h  AppSettings.cpp  AppSettings.h  AudioCaptureEngine.cpp  AudioCaptureEngine.h  LevelMeter.cpp  LevelMeter.h  Main.cpp  MainComponent.cpp  MainComponent.h  SettingsStore.cpp  SettingsStore.h
src/audio/: AudioCaptureEngine.cpp  AudioCaptureEngine.h
src/core/: AppLogger.cpp  AppLogger.h  AppSettings.cpp  AppSettings.h  GlobalHotkeys.cpp  GlobalHotkeys.h  SettingsStore.cpp  SettingsStore.h  SpotifyClient.cpp  SpotifyClient.h  SystemTray.cpp  SystemTray.h
src/core/auth/: error.html  style.css  success.html
src/ui/: LevelMeter.cpp  LevelMeter.h  MainComponent.cpp  MainComponent.h  MixerLookAndFeel.h  VolumeControl.cpp  VolumeControl.h  VolumeNotification.cpp  VolumeNotification.h
tests/: AppSettingsTest.cpp  LevelMeterTest.cpp  MainTest.cpp  Phase7Test.cpp  SpotifyClientTest.cpp  VolumeControlTest.cpp
